# aws-kubernetes-guides

./: README.md  argocd-eks-complete-guide.md  ats-optimized-resume.txt  aws-backup-master-guide.md  aws-best-practices-improved-guide.md  aws-best-practices-interview-guide.md  aws-cost-optimization-improved-guide.md  aws-cost-optimization-interview-scenarios.md  aws-disaster-recovery-complete-guide.md  aws-kms-complete-guide-part2.md  aws-kms-complete-guide.md  aws-landing-zone-complete-guide.md  aws-landing-zone-improved-guide.md  aws-organizations-scp-complete-guide.md  aws-waf-improved-guide.md  aws-waf-learning-guide.md  cilium-eks-complete-guide.md  document-improvement-plan.md  efk-eks-complete-guide.md  efk-eks-conceptual-guide.md  eks-cluster-access-complete-guide.md  eks-logging-improved-guide.md  eks-logging-strategies-guide.md  eks-pvc-ebs-csi-mastery-guide.md  eks-secrets-management-complete-guide.md  eks-security-best-practices-guide.md  eks-security-checklist-aws-official.md  eks-security-improved-guide.md  eks-zero-downtime-improved-guide.md  eks-zero-downtime-upgrade-guide.md  enhanced-resume.md  fix-lfs-migration.sh  fix-lfs.sh  gcp-identity-aware-proxy-complete-guide.md  gcp-jit-access-complete-guide.md  gcp-kms-complete-guide.md  gcp-to-aws-migration-complete-guide.md  gcp-workload-identity-github-actions-guide.md  git-branching-strategies-complete-guide.md  github-actions-aws-complete-guide.md  (+22 more)
gke-cost-optimizer-agent/: .env  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
gke-cost-optimizer-agent/config/: config.yaml
gke-cost-optimizer-agent/reports/: gke_optimization_report_20250923_224422.json  gke_optimization_report_20250923_225543.json  gke_optimization_report_20250923_230347.json  gke_optimization_report_20250923_230751.json
gke-cost-optimizer-agent/scripts/: run-demo.sh  setup.sh
opensearch-backup-restore/: README.md  main.tf  (+3 more)
(+20 files in other folders)
